added c++ level editor

--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
         <div class="row">
             <div class="projects-col">
                 <div class="project-description">
+                    <!-- <div class="text">
+                        <b>Ace Attorney Game Poster</b> is an Interactive Poster inspired by Ace Attorney series
+                    </div> -->
+                </div>
+                <a href="LevelEditor.html"><img src="images/Level Editor.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1">C++</p>
+                    <p class="tag2"> SFML</p>
+                </div>
+            </div>
+
+            <div class="projects-col">
+                <div class="project-description">
                     <div class="text">
                         <b>Ace Attorney Game Poster</b> is an Interactive Poster inspired by Ace Attorney series
                     </div>
