--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="text-box">
             <h1>Hi, My name is Yiyang Lu!</h1>
-            <p style="font-family:'Silkscreen', cursive"> Welcome to my Website!</p>
+            <h3 > Welcome to my Website!</h3>
             <a href="#work" class="btn"> Learn more about me </a>
         </div>
     </div>
