added particle effect

--- a/DodgyDice.html
+++ b/DodgyDice.html
@@ -29,6 +29,19 @@
 <body>
     <div id="header"></div>
     <section class="projects">
+
+        <div class="project-title">
+            <h1 id="project-title"> Dodgy Dice (2022) </h1>
+            <div class="interactive">
+                <a href="https://chonkershq.itch.io/dodgy-dice" target="_blank"
+                    rel="noopener noreferrer" class="btn_2"> Play Now</a>
+                <i class="fa fa-github" id="icon" onclick="location.href = 'https://github.com/metalgaiden/DodgeRoll'"
+                    target="_blank" rel="noopener noreferrer" style="cursor:pointer" title="source code"></i>
+            </div>
+            <b>GMTK 2022 GAME JAM</b> projects <br>
+        </div>
+
+
         <div class="title">
             <div class="cover">
                 <video autoplay loop>
@@ -44,59 +57,46 @@
                     <img src="images/sc2-1.png">
                 </div>
             </div>
-            <div class="description">
+            <div class="game-info">
+                <div class="description">
 
-                <h1 id="project-title"> Dodgy Dice (2022)</h1>
+                    <!-- description -->
 
-                <div class="interactive">
-                    <a href="https://chonkershq.itch.io/dodgy-dice" target="_blank" rel="noopener noreferrer"
-                        class="btn_2"> Play Now</a>
-                    <i class="fa fa-github" id="icon" onclick="location.href = 'https://github.com/metalgaiden/DodgeRoll'"
-                        target="_blank" rel="noopener noreferrer" style="cursor:pointer" title="source code"></i>
-                </div>
-                <!-- description -->
-                <b>GMTK 2022 GAME JAM</b> projects <br>
-                <p>
                     <b>Dodgy Dice</b> is a top down, vampire-survivor-like bullet hell where the character is a
                     multi sided die. Each time a die is rolled, a number is generated and used to fuel various behaviors
                     of the
                     game.
-                </p>
 
-
+                </div>
                 <div class="contribution">
-                    <h2 id="project-title">My contribution</h2>
+
+                    <h1 id="project-title"> What part did I do? </h1>
                     <li>Developed with Godot and GDscript.</li>
                     <li>Brainstormed, desigend and finished the whole game within 48 hours with another 10 group
                         memebers.</li>
                     <li>I was responsible for dice randomnizing, dice spawning, and UI/Menu code.</li>
                     <li>I worked closely as programmers iterating through gameplay features and build mechanics.</li>
                 </div>
+
             </div>
 
 
-
-        </div>
-
-
-        <div class="walkthrough">
-            <!-- <iframe src="https://www.youtube.com/embed/l4d3-rslow8" title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe> -->
-
         </div>
 
 
 
+    </section>
 
-        <!-- <div>
+
+
+    <!-- <div>
         <h2>Design Details</h2>
         <p><a
                 href="https://docs.google.com/presentation/d/1MdtTKm_kEejC5-dENBHoSK-WHHb_aEeLbEA8JtSirbc/edit?usp=sharing">Design
                 Slides</a></p>
     </div> -->
 
-    </section>
+
     <div id="footer"></div>
 </body>
 
