--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
             </div>
 
             <div class="projects-col">
+                <div class="project-description">
+                    <!-- <div class="text">
+                        <b>Dodgy Dice</b> is a 2D Top down, vampire-survivor-like bullet hell where the character is a
+                        multi sided die.
+                        Each time a die is rolled, a number is generated and used to fuel various behaviors of the
+                        game
+                    </div> -->
+                </div>
+                <a href="DodgyDice.html"><img src="images/dogy_4.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> GDScript </p>
+                    <p class="tag2"> Godot</p>
+                    <p class="tag3"> 2D</p>
+                </div>
+            </div>
+            <div class="projects-col">
 
                 <div class="project-description">
                     <div class="text">
@@ -114,22 +130,6 @@
                 </div>
             </div>
 
-            <div class="projects-col">
-                <div class="project-description">
-                    <div class="text">
-                        <b>Dodgy Dice</b> is a 2D Top down, vampire-survivor-like bullet hell where the character is a
-                        multi sided die.
-                        Each time a die is rolled, a number is generated and used to fuel various behaviors of the
-                        game
-                    </div>
-                </div>
-                <a href="DodgyDice.html"><img src="images/dogy_4.png" style="width:100%" class="image"></a>
-                <div class="tags">
-                    <p class="tag1"> GDScript </p>
-                    <p class="tag2"> Godot</p>
-                    <p class="tag3"> 2D</p>
-                </div>
-            </div>
 
             <div class="projects-col">
                 <div class="project-description">
@@ -178,7 +178,18 @@
                     <p class="tag2"> SFML</p>
                 </div>
             </div>
-
+            <div class="projects-col">
+                <div class="project-description">
+                    <!-- <div class="text">
+                        <b>Ace Attorney Game Poster</b> is an Interactive Poster inspired by Ace Attorney series
+                    </div> -->
+                </div>
+                <a href="ParticleEffect.html"><img src="images/Level Editor.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1">C++</p>
+                    <p class="tag2"> SFML</p>
+                </div>
+            </div>
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
