updated particle effect

--- a/ParticleEffect.html
+++ b/ParticleEffect.html
@@ -35,10 +35,10 @@
         <div class="project-title">
             <h1 id="project-title"> Particle Burster</h1>
             <div class="interactive">
-                <a href="Particle Effect.zip" target="_blank" rel="noopener noreferrer" class="btn_2" download>
+                <a href="ParticleEffect.zip" target="_blank" rel="noopener noreferrer" class="btn_2" download>
                     Download</a>
                 <i class="fa fa-github" id="icon"
-                    onclick="location.href = 'https://github.com/lyiyang0702/Grid-Based-Level-Editor'" target="_blank"
+                    onclick="location.href = 'https://github.com/lyiyang0702/Particle-Effect.git'" target="_blank"
                     rel="noopener noreferrer" style="cursor:pointer" title="source code"></i>
 
             </div>
@@ -49,7 +49,7 @@
         <div class="title">
             <div class="cover">
                 <video autoplay loop controls>
-                    <source src="video/Level Editor.mp4" type="video/mp4">
+                    <source src="video/ParticleEffect.mp4" type="video/mp4">
                 </video>
 
                 <!-- <div class="pics">
