--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Yiyang Lu's Portfolio</title>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous">
-    </script>
+        </script>
     <script>
         $(function () {
             $('#header').load("header.html");
@@ -16,8 +16,8 @@
     </script>
 
     <link rel="icon" type="image/x-icon" href="website-icon.png">
-    <link href="style.css" rel="stylesheet" type="text/css" href=“style.css”/>
-    <link href="about.css" rel="stylesheet" type="text/css" href=“about.css”/>
+    <link href="style.css" rel="stylesheet" type="text/css" href=“style.css” />
+    <link href="about.css" rel="stylesheet" type="text/css" href=“about.css” />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -29,13 +29,17 @@
 <body>
     <div id="header"></div>
 
-    <section class = "about">
-        <h1 >About Me </h1>
-            <p>Hi everyone, I'm Yiyang Lu! I just achieved a bachelor's degree in Computer Science: Game Design this June, and I am continuing to pursue my Master's degree in Game and Playable Media at UCSC Silicon Valley Extension right now. I have worked on several school projects as a game programmer on different game engines and enjoy collaborating with people. I look forward to working in a professional game development environment to fulfill my dream of contributing to the video game industry.<br>
-                
+    <section class="about">
+        <h1>About Me </h1>
+        <p>Hi everyone, I'm Yiyang Lu! I just achieved my bachelor's degree in Computer Science: Game Design this June,
+            and I am continuing to pursue my Master's degree in Game and Playable Media at UCSC Silicon Valley Extension
+            right now. I have worked on several school projects as a game programmer on different game engines and enjoy
+            collaborating with people. I look forward to working in a professional game development environment to
+            fulfill my dream of contributing to the video game industry.<br>
 
-                Fun fact about me: I can bake very delicious cookies :D<br>
-            </p>
+
+            Fun fact about me: I can bake very delicious cookies :D<br>
+        </p>
     </section>
     <div id="footer"></div>
 </body>
