added itch page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <section class="games">
         <div class="introductions">
             <h1><a id="work"> My Projects</a></h1>
-            <p>All the projects I've worked on!</a></p>
+            <p>All the projects I've worked on!</p>
+            <p><a href="https://yiyang-lu.itch.io/" target="_blank" rel="noopener noreferrer">itch page</a></p>
         </div>
 
         <h2> Collaborated Projects</h2>
@@ -187,7 +188,8 @@
                         <b>Ace Attorney Game Poster</b> is an Interactive Poster inspired by Ace Attorney series
                     </div> -->
                 </div>
-                <a href="ParticleEffect.html"><img src="images/Particle Effect.gif" style="width:100%" class="image"></a>
+                <a href="ParticleEffect.html"><img src="images/Particle Effect.gif" style="width:100%"
+                        class="image"></a>
                 <div class="tags">
                     <p class="tag1">C++</p>
                     <p class="tag2"> SFML</p>
