--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
+
+                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
+                         mod weapons to build up their power with extra effects to survive -->
+                    </div>
+
+                </div>
+                <a href="FisherGame.html"><img src="images/Untitled Fisher Game.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> C# </p>
+                    <p class="tag2"> Unity</p>
+                    <p class="tag3"> 3D</p>
+                </div>
+            </div>
+
+            <div class="projects-col">
+                <div class="project-description">
+                    <div class="text">
                         <b>Hex Harmonia</b> is a 3D puzzle game which contains various kinds of puzzles. Resolve
                         all the puzzles and escaping from this big hexagon room!
                     </div>
