updated fisher video

--- a/FisherGame.html
+++ b/FisherGame.html
@@ -49,11 +49,11 @@
         <div class="title">
             <div class="cover">
                 <video autoplay loop controls>
-                    <source src="video/Untitled Fisher Game.mp4" type="video/mp4">
+                    <source src="video/FisherGame.mp4" type="video/mp4">
                 </video>
 
                 <a href="https://youtu.be/rLB9eSLWT78" target="_blank" rel="noopener noreferrer" class="btn_2">
-                    More</a>
+                    Normal Speed Walkthrough</a>
                 <div class="pics">
                     <img src="images/fisher1.png">
                     <img src="images/fisher2.gif">
