--- a/index.html
+++ b/index.html
@@ -86,7 +86,22 @@
                     <p class="tag3"> 3D</p>
                 </div>
             </div>
+            <div class="projects-col">
+                <div class="project-description">
+                    <div class="text">
 
+                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
+                         mod weapons to build up their power with extra effects to survive -->
+                    </div>
+
+                </div>
+                <a href="SpreadSheetGame.html"><img src="images/spreadsheet1.png" style="width:100%" class="image"></a>
+                <div class="tags">
+                    <p class="tag1"> JavaScript </p>
+                    <p class="tag2"> GoogleSheets</p>
+                    <p class="tag3"> 2D</p>
+                </div>
+            </div>
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
@@ -119,7 +134,7 @@
                     <p class="tag3"> 2D</p>
                 </div>
             </div>
-            <div class="projects-col">
+            <!-- <div class="projects-col">
 
                 <div class="project-description">
                     <div class="text">
@@ -134,9 +149,9 @@
                     <p class="tag2"> Unity</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="projects-col">
+            <!-- <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
                         <b>Turtles All the Way Down</b> is a 3D Endless Runner game.
@@ -149,7 +164,7 @@
                     <p class="tag2"> Unity</p>
                     <p class="tag3"> 3D</p>
                 </div>
-            </div>
+            </div> -->
 
 
             <div class="projects-col">
