--- a/SpreadSheetGame.html
+++ b/SpreadSheetGame.html
@@ -35,8 +35,8 @@
         <div class="project-title">
             <h1 id="project-title"> Row/Col Cultivation (2023)</h1>
             <div class="interactive">
-                <a href="https://docs.google.com/spreadsheets/d/1NkeowTk1cEI7Di2R4-ZPosCScGhhAhfXH8Hk2MRp0Qk/edit?usp=sharing" target="_blank"
-                    rel="noopener noreferrer" class="btn_2"> Play Now</a>
+                <a href="https://docs.google.com/spreadsheets/d/1NkeowTk1cEI7Di2R4-ZPosCScGhhAhfXH8Hk2MRp0Qk/edit?usp=sharing"
+                    target="_blank" rel="noopener noreferrer" class="btn_2"> Play Now</a>
             </div>
         </div>
 
@@ -51,11 +51,10 @@
                 <a href="https://www.youtube.com/@gunjumpers" target="_blank" rel="noopener noreferrer" class="btn_2">
                     More</a>
                 <div class="pics">
-                    <img src="images/dc1.jpg">
-                    <img src="images/dc2.jpg">
-                    <img src="images/dc3.jpg">
-                    <img src="images/dc4.jpg">
-                    <img src="images/dc5.jpg">
+                    <img src="images/spreadsheet1.png">
+                    <img src="images/spreadsheet2.png">
+                    <img src="images/spreadsheet3.png">
+                    <img src="images/Spreadsheet4.png">
                 </div>
 
             </div>
@@ -72,7 +71,8 @@
                 <div class="contribution">
                     <h2 id="project-title">What part did I do? </h2>
 
-                    <li onclick="hideBlock('item')" style="cursor:pointer">Item System/Item </li>
+                    <li>Item System/Item <i class="fa fa-caret-down" onclick="hideBlock('item')"
+                            style="cursor:pointer"></i> </li>
                     <div id="item" style="display: none;">
                         In Dracomaton, an item is an object that can have negative or positive effects on player which
                         adds a lot of variances to gameplay.<br>
@@ -90,8 +90,9 @@
                         simply changing the attributes on the inspector.<br>
                         <img src="images/ItemInspector.png"><br>
                     </div>
-                    <li onclick="hideBlock('resources')" style="cursor:pointer">Resources Management System (Rewards,
-                        Shops) </li>
+                    <li>Resources Management System (Rewards,
+                        Shops) <i class="fa fa-caret-down" onclick="hideBlock('resources')" style="cursor:pointer"></i>
+                    </li>
                     <div id="resources" style="display: none;">
                         Another two crucial system I was responsible for is the rewards system and shop system which
                         handles spawning game items on a specific position for players.<br>
@@ -121,8 +122,9 @@
                         populate three shop item positions in the game.
 
                     </div>
-                    <li onclick="hideBlock('mod')" style="cursor:pointer">Mod Menu UI </li>
+                    <li> UI <i class="fa fa-caret-down" onclick="hideBlock('mod')" style="cursor:pointer"></i></li>
                     <div id="mod" style="display: none;">
+
                         Mod Menu is the crucial game UI in Dracomaton. There are two types of slots in the game: the
                         upper slots are Form slots, and the lower slots are Mods slots. The mechanics of Dracomaton is
                         that players can switch the form and mod by swapping their positions. For example, if players
