hide spreadsheet page

--- a/index.html
+++ b/index.html
@@ -86,12 +86,9 @@
                     <p class="tag3"> 3D</p>
                 </div>
             </div>
-            <div class="projects-col">
+            <!-- <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-
-                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
-                         mod weapons to build up their power with extra effects to survive -->
                     </div>
 
                 </div>
@@ -101,7 +98,7 @@
                     <p class="tag2"> GoogleSheets</p>
                     <p class="tag3"> 2D</p>
                 </div>
-            </div>
+            </div> -->
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
