updated icon and subtitles

--- a/DodgyDice.html
+++ b/DodgyDice.html
@@ -32,13 +32,14 @@
 
         <div class="project-title">
             <h1 id="project-title"> Dodgy Dice (2022) </h1>
+            <p>GMTK 2022 GAME JAM project</p>
             <div class="interactive">
                 <a href="https://chonkershq.itch.io/dodgy-dice" target="_blank"
                     rel="noopener noreferrer" class="btn_2"> Play Now</a>
                 <i class="fa fa-github" id="icon" onclick="location.href = 'https://github.com/metalgaiden/DodgeRoll'"
                     target="_blank" rel="noopener noreferrer" style="cursor:pointer" title="source code"></i>
             </div>
-            <b>GMTK 2022 GAME JAM</b> projects <br>
+
         </div>
 
 
