--- a/Dracomaton.html
+++ b/Dracomaton.html
@@ -34,6 +34,7 @@
 
         <div class="project-title">
             <h1 id="project-title"> Dracomaton (2023)</h1>
+            <p> Undergraduate Capstone Project </p>
             <div class="interactive">
                 <a href="https://store.steampowered.com/app/2457890/DRACOMATON/" target="_blank"
                     rel="noopener noreferrer" class="btn_2"> Play Now</a>
@@ -45,6 +46,7 @@
                     onclick="location.href = 'https://store.steampowered.com/app/2457890/DRACOMATON/'" target="_blank"
                     rel="noopener noreferrer" style="cursor:pointer"></i>
             </div>
+
         </div>
 
         <!-- description -->
