added github page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="introductions">
             <h1><a id="work"> My Projects</a></h1>
             <p>All the projects I've worked on!</p>
+            <p><a href="https://github.com/lyiyang0702" target="_blank" rel="noopener noreferrer">GitHub page</a></p>
             <p><a href="https://yiyang-lu.itch.io/" target="_blank" rel="noopener noreferrer">itch page</a></p>
         </div>
 
