Revert "small changes"
This reverts commit e409aaa3381d069356a98b3b822ed996f907f11e.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-                        Undergraduate Capstone Project
+
+                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
+                         mod weapons to build up their power with extra effects to survive -->
                     </div>
 
                 </div>
@@ -73,7 +75,8 @@
                 <div class="project-description">
                     <div class="text">
 
-                        Game Jam Project
+                        <!-- <b>Dracomaton</b> is a a top-down roguelike bullet hell where you can switch forms and
+                         mod weapons to build up their power with extra effects to survive -->
                     </div>
 
                 </div>
@@ -100,8 +103,8 @@
             <div class="projects-col">
                 <div class="project-description">
                     <div class="text">
-                        <!-- <b>Hex Harmonia</b> is a 3D puzzle game which contains various kinds of puzzles. Resolve
-                        all the puzzles and escaping from this big hexagon room! -->
+                        <b>Hex Harmonia</b> is a 3D puzzle game which contains various kinds of puzzles. Resolve
+                        all the puzzles and escaping from this big hexagon room!
                     </div>
 
                 </div>
@@ -115,9 +118,12 @@
 
             <div class="projects-col">
                 <div class="project-description">
-                    <div class="text">
-                        Game Jam Project
-                    </div>
+                    <!-- <div class="text">
+                        <b>Dodgy Dice</b> is a 2D Top down, vampire-survivor-like bullet hell where the character is a
+                        multi sided die.
+                        Each time a die is rolled, a number is generated and used to fuel various behaviors of the
+                        game
+                    </div> -->
                 </div>
                 <a href="DodgyDice.html"><img src="images/dogy_4.png" style="width:100%" class="image"></a>
                 <div class="tags">
